fix(marker-cluster): update marker cluster cdn path

--- a/examples/marker-clustering.html
+++ b/examples/marker-clustering.html
@@ -73,9 +73,7 @@
     {lat: -43.999792, lng: 170.463352}
   ]
 </script>
-<!-- Replace following script src -->
-<script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js">
-</script>
+<script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCIch65x7l91RjzTYXC98y6o1sH0a_NGb4&callback=initMap">
 </script>
