--- a/examples/visualizing-data.html
+++ b/examples/visualizing-data.html
@@ -18,33 +18,43 @@
 <body>
 <div id="map"></div>
 <script>
-  var map;
+  let map;
   function initMap() {
     map = new google.maps.Map(document.getElementById('map'), {
       zoom: 2,
-      center: new google.maps.LatLng(2.8,-187.3),
+      center: {lat: -33.865427, lng: 151.196123},
       mapTypeId: 'terrain'
     });
 
     // Create a <script> tag and set the USGS URL as the source.
-    var script = document.createElement('script');
+    const script = document.createElement('script');
+
     // This example uses a local copy of the GeoJSON stored at
     // http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.geojsonp
     script.src = 'https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js';
     document.getElementsByTagName('head')[0].appendChild(script);
+
+    map.data.setStyle(function(feature) {
+      const magnitude = feature.getProperty('mag');
+      return {
+        icon: getCircle(magnitude)
+      };
+    });
   }
 
-  // Loop through the results array and place a marker for each
-  // set of coordinates.
-  window.eqfeed_callback = function(results) {
-    for (var i = 0; i < results.features.length; i++) {
-      var coords = results.features[i].geometry.coordinates;
-      var latLng = new google.maps.LatLng(coords[1],coords[0]);
-      var marker = new google.maps.Marker({
-        position: latLng,
-        map: map
-      });
-    }
+  function getCircle(magnitude) {
+    return {
+      path: google.maps.SymbolPath.CIRCLE,
+      fillColor: 'red',
+      fillOpacity: .2,
+      scale: Math.pow(2, magnitude) / 2,
+      strokeColor: 'white',
+      strokeWeight: .5
+    };
+  }
+
+  function eqfeed_callback(results) {
+    map.data.addGeoJson(results);
   }
 </script>
 <script async defer
